--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
 @import url("reset.css");
+
+div {
+    display: block;
+}
+
+body {
+    background-color: grey;
+}
+
+#button-container {
+    width: 400px;
+    height: 400px;
+    display: grid;
+    margin-left: auto;
+    margin-right:auto;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}
+
+#display-container {
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    margin-right: 600px;
+    margin-left: 600px;
+    margin-bottom: 39px;
+    margin-top: 10px;
+    font-size: 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: white;
+    height: 20px;
+}
+
+button {
+    font-size: 20px;
+}
+
+.clear {
+    text-align: center;
+}
+
+.calc-container {
+    background-color: grey;
+}
