--- a/style.css
+++ b/style.css
@@ -32,15 +32,16 @@ body {
     border-style: solid;
     border-width: 1px;
     border-color: black;
-    margin-right: 600px;
-    margin-left: 600px;
-    margin-bottom: 39px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
     margin-top: 10px;
     font-size: 20px;
     padding-top: 8px;
     padding-bottom: 8px;
     background-color: white;
     height: 20px;
+    width: 400px;
 }
 
 button {
