--- a/style.css
+++ b/style.css
@@ -13,57 +13,73 @@ body {
 
 .button-container {
     width: 400px;
-    height: 400px;
+    height: 300px;
     display: grid;
     margin-left: auto;
     margin-right:auto;
-    border-style: solid;
+    border-style: none;
     border-color: black;
     border-width: 1px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     
 }
 
 #secondary {
     width: 400px;
     height: 70px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 #display-container {
     text-align: center;
     border-style: solid;
     border-width: 1px;
-    border-color: black;
+    border-bottom-width: 2px;
+    border-color: rgb(66, 65, 67);
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 20px;
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 40px;
     padding-top: 8px;
     padding-bottom: 8px;
-    background-color: white;
-    height: 20px;
+    background-image: linear-gradient(rgb(154, 154, 154), rgb(100, 100, 100));
+    height: 50px;
     width: 400px;
 }
 
 #display {
     font-family: 'Orbitron', sans-serif;
+    text-align: right;
+    font-size: 45px;
+    justify-content: center;
+    font-weight: bold;
+    color: rgba(33, 33, 33, 0.731);
 }
 
 button {
     font-size: 20px;
     font-family: 'Orbitron', sans-serif;
     background-color: rgb(221, 221, 221);
+    border-radius: 5px;
+    margin: 5px;
+    height: 70px;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.546);
 }
 
 .numeric {
     font-weight: bold;
+    background-image: radial-gradient(white, rgb(217, 217, 217));
+    border: 1px solid rgb(215, 215, 215);
 }
 
 .operator {
     font-weight: bold;
-    color: red;
+    color: black;
+    background-image: radial-gradient(rgb(255, 197, 139), rgb(194, 148, 103));
+    border: 1px solid rgb(255, 211, 167);
 }
 
 button:hover{
@@ -76,6 +92,7 @@ button:hover{
 
 .calc-container {
     background-color: rgb(65, 66, 64);
+    background-image: radial-gradient(rgb(124, 124, 124), rgb(65, 66, 67));
     width: 480px;
     margin-left: auto;
     margin-right: auto;
@@ -83,4 +100,19 @@ button:hover{
     padding-top: 20px;
     padding-bottom: 30px;
     border-radius: 20px;
+    box-shadow: 5px 3px 5px black;
+    border: 2px solid rgb(192, 192, 192);
+}
+
+#clear-button {
+    background-image: radial-gradient(rgb(254, 104, 81), rgb(194, 77, 59));
+    border: 1px solid rgb(255, 132, 113);
+}
+
+.credit {
+    font-size: 20px;
+    background-image: linear-gradient(rgb(124, 124, 124), rgb(65, 66, 67));
+    vertical-align: bottom;
+    width: 100px;
+    padding: 10px;
 }
