--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
     background-image: linear-gradient(rgb(154, 154, 154), rgb(100, 100, 100));
     height: 50px;
     width: 400px;
+    overflow: auto;
 }
 
 #display {
